--- a/questions/question11.html
+++ b/questions/question11.html
@@ -12,21 +12,17 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16520256814"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-16520256814'); </script>
-
-  <!-- Event snippet for Page view conversion page --> <script> gtag('event', 'conversion', {'send_to': 'AW-16520256814/UctgCKbnraQZEK66vMU9'}); </script>
-
   <title>InterviewAware</title>
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
 
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="../css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="../css/responsive.css" rel="stylesheet" />
 </head>
 
 <body class="sub_page">
@@ -35,9 +31,9 @@
     <header class="new-header">
       <div class="header-content">
         <a class="logo-image" href="#">
-            <img src="images/samplelogo.png" alt="" />
+            <img src="../images/samplelogo.png" alt="" />
         </a>
-        <a href="index.html" class = "company-name">InterviewAware</a>
+        <a href="../index.html" class = "company-name">InterviewAware</a>
         <div class="header-right">
           <div class="btn-drop">
             <form>
@@ -52,7 +48,7 @@
           <div class="btn-drop">
             <button> Concepts</button>
             <div class="dropdown-content">
-              <a href="concept.html">Electrical Engineering</a>
+              <a href="../concept.html">Electrical Engineering</a>
               <p class="dropdownfiller"> Mechanical Engineering (coming soon)</p>
               <p class="dropdownfiller"> Civil Engineering (coming soon)</p>
               <p class="dropdownfiller"> Chemical Engineering (coming soon)</p>
@@ -61,7 +57,7 @@
           <div class="btn-drop">
             <button> Interview Questions</button>
             <div class="dropdown-content">
-              <a href="content.html">Electrical Engineering</a>
+              <a href="../content.html">Electrical Engineering</a>
               <p class="dropdownfiller"> Mechanical Engineering (coming soon)</p>
               <p class="dropdownfiller"> Civil Engineering (coming soon)</p>
               <p class="dropdownfiller"> Chemical Engineering (coming soon)</p>
@@ -77,172 +73,66 @@
   <!-- table section -->
 
   <section class="table_section layout_padding2-top">
-    
-   <!--  <div class="table_section_div layout_padding2-top" style="margin-bottom: 20px;">
-    </div>
- -->
-    <div class="table_section_div layout_padding2-top">
-      <div class = "container">
-        <div class="detail-box">
-          <h3>
-          Electrical Engineering
-          </h3>
-          <div class="answer-entry-bullets">
-            <ul class="answer-bullets">
-              <li>Preparing for an electrical engineering interview involves a multifaceted approach to showcase both technical proficiency and problem-solving skills.</li>
-              <li>Candidates typically focus on reviewing core concepts such as circuit analysis, digital electronics, electromagnetics, and signal processing.</li>
-              <li>being able to effectively communicate technical concepts and discuss past projects or experiences can greatly enhance one's chances of success in an electrical engineering interview.</li>
-              <li>In this section, we will explore sample interview questions, asked at big tech companies, that test the fundamental skills of electrical engineering</li>
-            </ul>
+    <!-- <div class = "test_container">
+      <div class="box1">
+        <div class="container">
+          <div class="detail-box">
+            <h5>
+            Stats
+            </h5>
           </div>
         </div>
       </div>
-      <div class="layout_padding-top-20">
-        <table>
-        <tr>
-          <th>Title</th>
-          <th>Company</th>
-          <th>Topic</th>
-          <th>Difficulty</th>
-        </tr>
-        <tr>
-          <td><a href="questions/question.html"> Describe Ohm's Law</a></td>
-          <td>Apple</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question2.html"> Voltage Regulation</a></td>
-          <td>Apple</td>
-          <td>Power Electronics</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question3.html"> Kirchhoff's Laws</a></td>
-          <td>Apple</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question4.html"> Decoupling Capacitors</a></td>
-          <td>Apple</td>
-          <td>Digital Signal Processing</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question5.html"> Calculating Current</a></td>
-          <td>Apple</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question6.html"> AC DC Converters</a></td>
-          <td>Apple</td>
-          <td>Power Electronics</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question7.html"> DC-DC Converters</a></td>
-          <td>Apple</td>
-          <td>Power Electronics</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question8.html"> Ohm's Law - Calculating Current</a></td>
-          <td>Intel</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question9.html"> Ohm's Law - Series Circuit</a></td>
-          <td>Intel</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question10.html"> Ohm's Law - Combination Circuit</a></td>
-          <td>Intel</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question11.html"> Equivalent Resistances</a></td>
-          <td>Analog Devices</td>
-          <td>Circuit Theory</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question12.html"> Calculating Power</a></td>
-          <td>Analog Devices</td>
-          <td>Circuit Theory</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question13.html"> Op Amp Basics</a></td>
-          <td>Analog Devices</td>
-          <td>Op Amps</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question14.html"> Op Amp Grounding</a></td>
-          <td>Analog Devices</td>
-          <td>Op Amps</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question15.html"> Inverting Op Amp Output</a></td>
-          <td>AMD</td>
-          <td>Op Amps</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question16.html"> Non-Inverting Op Amp Output</a></td>
-          <td>AMD</td>
-          <td>Op Amps</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question17.html"> Gain of an Inverting Op Amp</a></td>
-          <td>AMD</td>
-          <td>Op Amps</td>
-          <td>Easy</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question18.html"> Designing a Voltage Follower Circuit</a></td>
-          <td>AMD</td>
-          <td>Op Amps</td>
-          <td>Hard</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question19.html"> Instrumentation Amp Basics</a></td>
-          <td>Microsoft</td>
-          <td>Instrumentation Amps</td>
-          <td>Medium</td>
-        </tr>
-        <tr>
-          <td><a href="questions/question20.html"> Instrumentation Amp Basics</a></td>
-          <td>Microsoft</td>
-          <td>Instrumentation Amp Design</td>
-          <td>Hard</td>
-        </tr>
-
-      </table>
+      <div class="box2">
+        <div class="container">
+          <div class="detail-box">
+            <p>
+            There are many variations of passages of Lorem Ipsum available
+            </p>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="table_section_div layout_padding2-top" style="margin-top: 20px; margin-bottom: 20px;">
+    </div> -->
+    <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h4>
-          More Interview Material Coming Soon!
-          </h4>
-          <p>
-            We are working hard to place more content in the form of pictures, videos, etc. We want to help everyone get their dream jobs!</p>
-          <!-- <div class="answer-entry-bullets">
-            <ul class="answer-bullets">
-              <li><a href="#">Intro to Power Electronics</a></li>
-            </ul>
-          </div> -->
+          <h3>AC DC Converters</h3>
+            <p>
+            In a complex circuit, there are four resistors: R1 = 5 ohms, R2 = 10 ohms, R3 = 15 ohms, and R4 = 20 ohms. Resistors R2 and R3   are connected in parallel, and this combination is connected in series with   R1 and R4.  If the voltage across the entire circuit is 60 volts, what is the total resistance of the circuit?
+            </p>
+            <div class="multiplechoice">
+              <form>
+                <p><input type="radio" id="correct" name="multiplechoice">31 ohms</p>
+                <p><input type="radio" id="incorrect" name="multiplechoice">33 ohms</p>
+                <p><input type="radio" id="incorrect" name="multiplechoice">35 ohms</p>
+                <p><input type="radio" id="incorrect" name="multiplechoice">37 ohms</p>
+            </form>
+            </div>
+            <div id="correct-answer" style="display: none;">
+              <h5> Correct ✔ </h5>
+            </div>
+            <div id="incorrect-answer" style="display: none;">
+              <h5> Incorrect ✘</h5>
+            </div>
+            <div id="answer-field" style="display: none;">
+              <h5> Answers</h5>
+              <ul>
+                <li>First, calculate the equivalent resistance of the parallel resistors R2 and R3:</li>
+                <li>R_parallel = 6 ohms</li>
+                <li>Next, add the resistance of R1 and R4 in series:</li>
+                <li>R_total = 5 ohms + 6 ohms + 20 ohms = 31 ohms</li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="submit_section_div layout_padding3-top">
+      <div class="submit-btn-div">
+        <button class="submit-btn" onclick="displayText(); check()"> Check Answer</button>
+      </div>
+      <div class="backbtn">
+        <a href="../content.html"> Back to Questions →</a>
       </div>
     </div>
   </section>
@@ -321,7 +211,7 @@
       <div class="container">
         <div class="info_top">
           <div class="info_logo">
-            <img src="images/samplelogo.png" alt="" />
+            <img src="../images/samplelogo.png" alt="" />
             <span>
               Interview.Aware
             </span>
@@ -398,9 +288,9 @@
   <!-- end  footer section -->
 
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="../js/jquery-3.4.1.min.js"></script>
+  <script src="../js/bootstrap.js"></script>
+  <script src="../js/custom.js"></script>
 
 
 </body>
