--- a/content.html
+++ b/content.html
@@ -106,7 +106,7 @@
           <th>Difficulty</th>
         </tr>
         <tr>
-          <td><a href="questions/question.html"> Describe Ohm's Law</a></td>
+          <td><a href="questions/question1.html"> Describe Ohm's Law</a></td>
           <td>Apple</td>
           <td>Circuit Theory</td>
           <td>Easy</td>
@@ -131,13 +131,13 @@
         </tr>
         <tr>
           <td><a href="questions/question5.html"> Calculating Current</a></td>
-          <td>Apple</td>
+          <td>Google</td>
           <td>Circuit Theory</td>
           <td>Easy</td>
         </tr>
         <tr>
           <td><a href="questions/question6.html"> AC DC Converters</a></td>
-          <td>Apple</td>
+          <td>Google</td>
           <td>Power Electronics</td>
           <td>Easy</td>
         </tr>
@@ -222,6 +222,18 @@
         <tr>
           <td><a href="questions/question20.html"> Instrumentation Amp Basics</a></td>
           <td>Microsoft</td>
+          <td>Instrumentation Amp Design</td>
+          <td>Hard</td>
+        </tr>
+        <tr>
+          <td><a href="questions/question21.html"> Resistance Matching Op-Amps</a></td>
+          <td>Microsoft</td>
+          <td>Instrumentation Amp Design</td>
+          <td>Medium</td>
+        </tr>
+        <tr>
+          <td><a href="questions/question22.html"> Common Mode Rejection Ratio</a></td>
+          <td>Google</td>
           <td>Instrumentation Amp Design</td>
           <td>Hard</td>
         </tr>
