--- a/questions/question12.html
+++ b/questions/question12.html
@@ -96,7 +96,7 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>AC DC Converters</h3>
+          <h3>Calculating Power in a Resistor</h3>
             <p>
             In a complex circuit, there are four resistors: R1 = 10 ohms, R2 = 20 ohms, R3 = 30 ohms, and R4 = 40 ohms. R1 and R2 are connected in series, and this combination is connected in parallel with R3. This entire network is then connected in series with R4. If the voltage across the entire circuit is 120 volts, approximately what is the power dissipated by R3?
             </p>
