--- a/questions/question8.html
+++ b/questions/question8.html
@@ -96,7 +96,7 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>AC DC Converters</h3>
+          <h3>Ohm’s Law – Calculating Current</h3>
             <p>
             In a simple series circuit, if the total resistance is 15 ohms and the voltage across the circuit is 45 volts, what is the current flowing through the circuit?
             </p>
