--- a/questions/question9.html
+++ b/questions/question9.html
@@ -96,7 +96,7 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>AC DC Converters</h3>
+          <h3>Ohm’s Law – Calculating Current in Series Circuit</h3>
             <p>
             In a series circuit, there are three resistors with resistances of 5 ohms, 10 ohms, and 15 ohms connected to a 60-volt power supply. What is the current flowing through the circuit?
             </p>
