--- a/questions/question1.html
+++ b/questions/question1.html
@@ -96,47 +96,44 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>Ohm’s Law – Calculating Current in a Combination Circuit</h3>
+          <h3>
+          Describe Ohm's Law
+          </h3>
             <p>
-            In a circuit, there are three resistors:  R1 = 10 ohms, R2 = 20 ohms, and  R3 = 30 ohms. R2 and R3 are connected in parallel, and this combination is connected in series with R1. If the voltage across the entire circuit is 60 volts, what is the current flowing through the circuit?
+            In a few sentences, describe Ohm's Law and the relationship between the respective variables.
             </p>
-            <div class="multiplechoice">
-              <form>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.1A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.3A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.5A</p>
-                <p><input type="radio" id="correct" name="multiplechoice">2.7A</p>
+            <form>
+              <textarea placeholder=" Enter your answer here..."></textarea> 
             </form>
-            </div>
-            <div id="correct-answer" style="display: none;">
-              <h5> Correct ✔ </h5>
-            </div>
-            <div id="incorrect-answer" style="display: none;">
-              <h5> Incorrect ✘</h5>
-            </div>
+            <!-- <button class="submit-btn" onclick="displayText()"> Check Answer</button> -->
             <div id="answer-field" style="display: none;">
               <h5> Answers</h5>
               <ul>
-                <li>First, calculate the equivalent resistance of the parallel resistors R2 and R3:</li>
-                <li> R_parallel = 12 ohms</li>
-                <li>Next, add the resistance of R1 in series:</li>
-                <li>R_total = 12 ohms + 10 ohms = 22 ohms</li>
-                <li>Finally, use Ohm's Law to find the current:</li>
-                <li>I = 60/22 = 2.7 A</li>
+                <li>Mathematically expressed as I = V/R, where I is the current in amperes (A), V is the voltage in volts (V), and R is the resistance in ohms (Ω).</li>
+                <li>Increase in voltage (V) leads to a proportional increase in current (I), given a constant resistance (R).</li>
+                <li>Increase in resistance (R) leads to a decrease in current (I), given a constant voltage (V).</li>
+                <li>A decrease in resistance (R) leads to an increase in current (I), given a constant voltage (V).</li>
               </ul>
+              <!-- <div class="backbtn">
+                <a href="../content.html"> Back to Questions →</a>
+              </div> -->
             </div>
-          </div>
         </div>
       </div>
     </div>
     <div class="submit_section_div layout_padding3-top">
       <div class="submit-btn-div">
-        <button class="submit-btn" onclick="displayText(); check()"> Check Answer</button>
+        <button class="submit-btn" onclick="displayText()"> Check Answer</button>
       </div>
       <div class="backbtn">
         <a href="../content.html"> Back to Questions →</a>
       </div>
     </div>
+    
+    
+
+
+
   </section>
 
   <!-- end table section -->
