--- a/questions/question11.html
+++ b/questions/question11.html
@@ -96,7 +96,7 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>AC DC Converters</h3>
+          <h3>Calculating Equivalent Resistance</h3>
             <p>
             In a complex circuit, there are four resistors: R1 = 5 ohms, R2 = 10 ohms, R3 = 15 ohms, and R4 = 20 ohms. Resistors R2 and R3   are connected in parallel, and this combination is connected in series with   R1 and R4.  If the voltage across the entire circuit is 60 volts, what is the total resistance of the circuit?
             </p>
