--- a/questions/question21.html
+++ b/questions/question21.html
@@ -96,47 +96,42 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>Ohm’s Law – Calculating Current in a Combination Circuit</h3>
+          <h3>
+          Resistance Matching Op-Amps
+          </h3>
             <p>
-            In a circuit, there are three resistors:  R1 = 10 ohms, R2 = 20 ohms, and  R3 = 30 ohms. R2 and R3 are connected in parallel, and this combination is connected in series with R1. If the voltage across the entire circuit is 60 volts, what is the current flowing through the circuit?
+            Discuss the Importance of Resistance matching in Op-Amp Circuits
             </p>
-            <div class="multiplechoice">
-              <form>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.1A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.3A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.5A</p>
-                <p><input type="radio" id="correct" name="multiplechoice">2.7A</p>
-            </form>
+            <div class="answer-entry-bullets">
+              <ul class="answer-bullets">
+                <li><input placeholder=" Enter your answer here..."></input></li>
+                <li><input placeholder=" Enter your answer here..."></input></li> 
+                <li><input placeholder=" Enter your answer here..."></input></li>  
+              </ul>
             </div>
-            <div id="correct-answer" style="display: none;">
-              <h5> Correct ✔ </h5>
-            </div>
-            <div id="incorrect-answer" style="display: none;">
-              <h5> Incorrect ✘</h5>
-            </div>
+            <!-- <button class="submit-btn" onclick="displayText()"> Check Answer</button> -->
             <div id="answer-field" style="display: none;">
               <h5> Answers</h5>
               <ul>
-                <li>First, calculate the equivalent resistance of the parallel resistors R2 and R3:</li>
-                <li> R_parallel = 12 ohms</li>
-                <li>Next, add the resistance of R1 in series:</li>
-                <li>R_total = 12 ohms + 10 ohms = 22 ohms</li>
-                <li>Finally, use Ohm's Law to find the current:</li>
-                <li>I = 60/22 = 2.7 A</li>
+                <li>Resistor matching in operational amplifiers (op amps) refers to the process of ensuring that the resistor values used in critical circuit configurations, such as feedback networks or input stages, are closely matched to each other. This matching is essential for achieving balanced operation and optimal performance in op amp circuits.</li>
+                <li>Resistor matching is particularly important in applications where precise gain control, accurate signal processing, and high common-mode rejection ratio (CMRR) are required. Mismatched resistor values can introduce errors, offset voltages, and non-linearities, leading to degraded performance and reduced circuit accuracy.</li>
               </ul>
+              <!-- <div class="backbtn">
+                <a href="../content.html"> Back to Questions →</a>
+              </div> -->
+              
             </div>
-          </div>
         </div>
       </div>
+      
     </div>
     <div class="submit_section_div layout_padding3-top">
       <div class="submit-btn-div">
-        <button class="submit-btn" onclick="displayText(); check()"> Check Answer</button>
+        <button class="submit-btn" onclick="displayText()"> Check Answer</button>
       </div>
       <div class="backbtn">
         <a href="../content.html"> Back to Questions →</a>
       </div>
-    </div>
   </section>
 
   <!-- end table section -->
