--- a/questions/question22.html
+++ b/questions/question22.html
@@ -96,47 +96,42 @@
     <div class="question_section_div layout_padding2-top">
       <div class = "container">
         <div class="detail-box">
-          <h3>Ohm’s Law – Calculating Current in a Combination Circuit</h3>
+          <h3>
+          Common Mode Rejection Ratio
+          </h3>
             <p>
-            In a circuit, there are three resistors:  R1 = 10 ohms, R2 = 20 ohms, and  R3 = 30 ohms. R2 and R3 are connected in parallel, and this combination is connected in series with R1. If the voltage across the entire circuit is 60 volts, what is the current flowing through the circuit?
-            </p>
-            <div class="multiplechoice">
-              <form>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.1A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.3A</p>
-                <p><input type="radio" id="incorrect" name="multiplechoice">2.5A</p>
-                <p><input type="radio" id="correct" name="multiplechoice">2.7A</p>
+            Explain the concept of Common-Mode Rejection Ratio (CMRR) in the context of operational amplifiers and its significance in amplifier design. </p>
+            <form>
+              <textarea placeholder=" Enter your answer here..."></textarea> 
             </form>
-            </div>
-            <div id="correct-answer" style="display: none;">
-              <h5> Correct ✔ </h5>
-            </div>
-            <div id="incorrect-answer" style="display: none;">
-              <h5> Incorrect ✘</h5>
-            </div>
+            <!-- <button class="submit-btn" onclick="displayText()"> Check Answer</button> -->
             <div id="answer-field" style="display: none;">
               <h5> Answers</h5>
               <ul>
-                <li>First, calculate the equivalent resistance of the parallel resistors R2 and R3:</li>
-                <li> R_parallel = 12 ohms</li>
-                <li>Next, add the resistance of R1 in series:</li>
-                <li>R_total = 12 ohms + 10 ohms = 22 ohms</li>
-                <li>Finally, use Ohm's Law to find the current:</li>
-                <li>I = 60/22 = 2.7 A</li>
+                <li>The Common-Mode Rejection Ratio (CMRR) is a measure of an operational amplifier's ability to reject common-mode signals while amplifying differential signals. In other words, it quantifies how well an op amp can maintain its desired output voltage when both input terminals receive a signal with the same amplitude and phase.</li>
+                <li>A high CMRR indicates that the op amp effectively rejects common-mode signals, leading to a cleaner output signal that is primarily the amplified differential input. CMRR is crucial in amplifier design, especially in applications where the signal of interest is relatively small compared to common-mode noise or interference.</li>
+                <li>For instance, in biomedical instrumentation, where the signal of interest (such as an electrocardiogram or ECG) is often very small compared to common-mode noise from the environment, a high CMRR is essential to ensure accurate measurement of the physiological signal while rejecting interference.</li>
               </ul>
+              <!-- <div class="backbtn">
+                <a href="../content.html"> Back to Questions →</a>
+              </div> -->
             </div>
-          </div>
         </div>
       </div>
     </div>
     <div class="submit_section_div layout_padding3-top">
       <div class="submit-btn-div">
-        <button class="submit-btn" onclick="displayText(); check()"> Check Answer</button>
+        <button class="submit-btn" onclick="displayText()"> Check Answer</button>
       </div>
       <div class="backbtn">
         <a href="../content.html"> Back to Questions →</a>
       </div>
     </div>
+    
+    
+
+
+
   </section>
 
   <!-- end table section -->
