--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <ul>
                       <li>Verified <b>interview questions and answers</b> created by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.) </li>
                       <li>Study for your toughest engineering interviews</li>
-                      <li>Brush up on engineering concepts commonly asked in interviews</li>
+<!--                       <li>Brush up on engineering concepts commonly asked in interviews</li> -->
                       <!-- <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li> -->
                       <li>Land your dream job!</li>
                     </ul>
