--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                     <ul>
                       <li>Verified <b>interview questions and answers</b> created by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.) </li>
                       <li>Study for your toughest engineering interviews</li>
-<!--                       <li>Brush up on engineering concepts commonly asked in interviews</li> -->
-                      <!-- <li>Practice  sample interview questions created and verified by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.)</li> -->
+                      <li>Apple, Google, SpaceX, NVIDIA, & Tesla Interview Questions</li>
                       <li>Land your dream job!</li>
                     </ul>
                     <!-- <p>Study for some of the toughest engineering interviews, <br> with educational meterial and sample interview questions created and verified by engineers working at the biggest tech companies </p> -->
