feat: refresh landing colors and add dynamic tagline

--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
           <div class="carousel-item active">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-md-5 offset-md-1" style="background-color: whitesmoke;">
+                <div class="col-md-5 offset-md-1" style="background-color: var(--secondary);">
                   <div class="detail-box">
                     <h1>
                       Technical Engineering Interview Preparation, <br>
-                      In One, Easy Source - <span style="color:red;">FREE Today!</span>
+                      In One, Easy Source - <span class="accent-text">FREE Today!</span>
                     </h1>
+                    <h2 class="dynamic-message"><span id="dynamic-tagline"></span></h2>
                     <ul>
                       <li>Verified <b>interview questions and answers</b> created by interviewers working in the largest tech companies (Apple, Google, SpaceX, NVIDIA, etc.) </li>
                       <li>Study for your toughest engineering interviews</li>
@@ -121,7 +122,7 @@
                   </div>
                 </div>
                 <div class="offset-md-1 col-md-4 img-container">
-                  <div class="img-box" style="background-color: #F5EFE1;">
+                  <div class="img-box" style="background-color: var(--main);">
                     <img src="images/slider-img.png" alt="">
                   </div>
                 </div>
