Tweak hero gradient and hardware copy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body { @apply bg-[#0a0a0a] text-gray-300 font-sans; }
-    .bg-hero { background-image: url('images/experience-img.jpg'); }
     .reveal { opacity: 0; }
   </style>
 </head>
@@ -60,11 +59,11 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="bg-hero bg-cover bg-center min-h-screen flex items-center relative">
+  <section class="min-h-screen flex items-center relative bg-gradient-to-b from-accent-blue/20 via-[#0a0a0a] to-black">
     <div class="absolute inset-0 bg-gradient-to-t from-black/80"></div>
     <div class="relative z-10 max-w-3xl mx-auto text-center px-6">
-      <h1 class="reveal text-white text-6xl md:text-7xl font-extrabold tracking-tight font-display">Technical Interview Prep</h1>
-      <p class="reveal mt-6 text-lg leading-relaxed">Verified questions and resources to land your dream engineering job.</p>
+      <h1 class="reveal text-white text-6xl md:text-7xl font-extrabold tracking-tight font-display">Hardware Engineering Interview Prep</h1>
+      <p class="reveal mt-6 text-lg leading-relaxed">Hands-on circuit challenges, firmware questions, and resources to power your next hardware role.</p>
       <div class="reveal mt-10 flex flex-col sm:flex-row gap-4 justify-center">
         <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="rounded-full bg-accent-blue text-white px-8 py-3 font-semibold hover:bg-opacity-80 transition">Sign Up</a>
         <a href="#about" class="rounded-full border border-gray-300 text-white px-8 py-3 font-semibold hover:bg-white hover:text-black transition">Learn More</a>
