--- a/index.html
+++ b/index.html
@@ -44,19 +44,36 @@
 <body class="bg-[#0a0a0a] text-gray-300">
   <!-- Navigation -->
   <nav id="nav" class="fixed top-0 left-0 w-full z-50 transition-all duration-500">
-    <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
-      <a href="#" class="flex items-center space-x-2">
-        <img src="images/samplelogo.png" class="h-8 w-8" alt="" />
-        <span class="font-display text-white text-xl">InterviewAware</span>
-      </a>
-      <div class="space-x-6 hidden md:flex">
-        <a href="#about" class="text-gray-300 hover:text-white transition-colors">About</a>
-        <a href="#features" class="text-gray-300 hover:text-white transition-colors">Features</a>
-        <a href="concept.html" class="text-gray-300 hover:text-white transition-colors">Concepts</a>
+  <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-4">
+    <a href="index.html" class="flex items-center space-x-2">
+      <img src="images/samplelogo.png" class="h-8 w-8" alt="" />
+      <span class="font-display text-white text-xl">InterviewAware</span>
+    </a>
+    <div class="hidden md:flex items-center space-x-6">
+      <a href="about.html" class="text-gray-300 hover:text-white transition-colors">About</a>
+      <div class="relative group">
+        <button class="flex items-center text-gray-300 hover:text-white transition-colors">Concepts<svg class="ml-1 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg></button>
+        <div class="absolute left-0 mt-2 w-56 bg-black/80 backdrop-blur rounded-md opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
+          <a href="concept.html" class="block px-4 py-2 text-gray-300 hover:bg-accent-blue/20 hover:text-white">Electrical Engineering</a>
+          <span class="block px-4 py-2 text-gray-500">Mechanical Engineering (coming soon)</span>
+          <span class="block px-4 py-2 text-gray-500">Civil Engineering (coming soon)</span>
+          <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
+        </div>
       </div>
-      <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="hidden md:inline-block rounded-full bg-accent-blue text-white px-5 py-2 font-medium hover:bg-opacity-80 transition">Sign Up</a>
+      <div class="relative group">
+        <button class="flex items-center text-gray-300 hover:text-white transition-colors">Interview Questions<svg class="ml-1 h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg></button>
+        <div class="absolute left-0 mt-2 w-64 bg-black/80 backdrop-blur rounded-md opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
+          <a href="content.html" class="block px-4 py-2 text-gray-300 hover:bg-accent-blue/20 hover:text-white">Electrical Engineering</a>
+          <span class="block px-4 py-2 text-gray-500">Mechanical Engineering (coming soon)</span>
+          <span class="block px-4 py-2 text-gray-500">Civil Engineering (coming soon)</span>
+          <span class="block px-4 py-2 text-gray-500">Chemical Engineering (coming soon)</span>
+        </div>
+      </div>
     </div>
-  </nav>
+    <a href="https://forms.gle/8aHq2fjXJQZP2PDN8" class="hidden md:inline-block rounded-full bg-accent-blue text-white px-5 py-2 font-medium hover:bg-opacity-80 transition">Sign Up</a>
+  </div>
+</nav>
+
 
   <!-- Hero Section -->
   <section class="min-h-screen flex items-center relative bg-gradient-to-b from-accent-blue/20 via-[#0a0a0a] to-black">
